ingress-testing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddog-ui
  namespace: reddog
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.pathmatcher: PathPrefix
spec:
  rules:
  - http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
      - path: /accounting
        pathType: Prefix
        backend:
          service:
            name: accounting-service
            port:
              number: 8083
