reddog-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddog-ui
  namespace: reddog
spec:
  rules:
  - host: reddog-ui.brianredmond.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
